Support gracefully stopping traces on-demand (#2828)
